ui/src/style.css
@import '@vue-flow/core/dist/style.css';
@import '@vue-flow/core/dist/theme-default.css';

* {
    box-sizing: border-box;
}

:root {
    --border-color: #bcbcbc;
    --border-radius: 4px;
    --background-color: white;
    --secondary-background-color: #ecedf9;
    --focus-border-color: #007bff;
    --box-shadow-color-primary: #0000004d;
}

html, body, #app, #frame {
    height: 100%;
}

body {
    margin: 0;
    font-size: 100%;
    font-family: sans-serif;
}

/* id & class styles */

.node {
    background-color: var(--background-color);
    border: 1px solid var(--border-color);
    box-shadow: 1px 1px 7px -4px #8a8a8a;
    border-radius: var(--border-radius);
    min-width: 200px;
    max-width: 500px;

    .node-header {
        display: flex;
        justify-content: space-between;
        font-weight: bold;
        padding: 0.5rem 1rem;
        border-bottom: 1px solid var(--border-color);
    }

    .node-content {
        padding: 1rem;
    }
}

#frame {
    display: grid;
    grid-template-rows: auto 1fr;
}

#navbar {
    display: flex;
    justify-content: space-between;
    padding: 0.5rem 1rem;
    background-color: var(--secondary-background-color);
    border-bottom: 1px solid var(--border-color);
    box-shadow: 0 1px 11px 0px var(--box-shadow-color-primary);
    z-index: 1;
}

#frame-content {
    display: grid;
    grid-template-columns: 1fr 300px;
}

#sidebar {
    user-select: none;
    background-color: var(--secondary-background-color);
    border-left: 1px solid var(--border-color);
    box-shadow: 0 5px 10px var(--box-shadow-color-primary);
    z-index: 1;

    .sidebar-item {
        padding: 0.5rem 1rem;
        border-bottom: 1px solid var(--border-color);
        cursor: pointer;

        &.active {
            background-color: var(--background-color);
        }
    }
}

.tabs {
    display: flex;
}

.tabs > div {
    padding: 0.5rem;
    cursor: pointer;
    width: 100%;
    text-align: center;
    border-left: 1px solid transparent;
    border-right: 1px solid transparent;
    border-bottom: 1px solid var(--border-color);
}

.tabs > div.active {
    border-left: 1px solid var(--border-color);
    border-right: 1px solid var(--border-color);
    border-bottom: 0;
}

.tabs > div:not(.active) {
    color: darkgrey;
}

.tabs > div:first-child {
    border-left: 0;
}

.tabs > div:last-child {
    border-right: 0;
}

/* base styles */

.input {
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    padding: 0.5rem;
    font: inherit;
    background-color: var(--background-color);
}

.input:focus {
    outline: none;
    border-color: var(--focus-border-color);
}

table.no-padding {
    td, th {
        padding: 0;
    }
}

/* functional */

.full-width {
    width: 100%;
}

.full-height {
    height: 100%;
}

.flex {
    display: flex;
}

.flex-jc-sb {
    justify-content: space-between;
}

.flex-ai-c {
    align-items: center;
}

.grid {
    display: grid;
}

.ml-1 {
    margin-left: 0.5rem;
}

.mt-1 {
    margin-top: 0.5rem;
}

.mb-1 {
    margin-bottom: 0.5rem;
}

.p-1 {
    padding: 0.5rem;
}

.p-2 {
    padding: 1rem;
}

.cursor-pointer {
    cursor: pointer;
}

.cursor-grab {
    cursor: grab;
}

.text-center {
    text-align: center;
}

/* vue flow styles */

.vue-flow__node.selected > div.node {
    border-color: var(--focus-border-color);
}

.vue-flow__handle {
    --vf-handle: #ff5892;
    width: 10px;
    height: 10px;
}

